--- a/index.html
+++ b/index.html
@@ -35,6 +35,19 @@
         <input name="key7" id="key7-0" data-type="int" value="0" type="radio">
         <label for="key7-0">Inverted</label>
 </fieldset>
+
+<fieldset data-role="controlgroup" data-mini="true">
+ <legend><h4>Specific coordinates:</h4></legend>
+ <i>This is only if you have the above option on "Specified longitude and latitude".</i>
+    <div class="ui-field-contain">
+      <label for="key60" id="label_key60">Longitude</label>
+      <input name="key60" id="trans_key60" placeholder="Enter longitude" value="0.00" data-mini="true" type="text" maxlength="8">
+    </div>
+    <div class="ui-field-contain">
+      <label for="key61" id="label_key61">Latitude</label>
+      <input name="key61" id="trans_key61" placeholder="Enter latitude" value="0.00" data-mini="true" type="text" maxlength="8">
+    </div>
+</fieldset>
     </div>
 </div>
 <br />
@@ -51,6 +64,8 @@
         var options = {
           'temppref':     Number( $("input[name=key6]:checked").val() ),
           'theme':     Number( $("input[name=key7]:checked").val() ),
+          'custlong': $("input[name=key60]").val(),
+          'custlat': $("input[name=key61]").val(),
         }
         return options;
       }
@@ -65,6 +80,8 @@
           $("input[name=key6]").checkboxradio('refresh');
           $("input[name=key7][id=key7-"+ls_pto["theme"]+"]").prop('checked',true);
           $("input[name=key7]").checkboxradio('refresh');
+          $("input[name=key60]").val(ls_pto["custlong"]);
+          $("input[name=key61]").val(ls_pto["custlat"]);
         }
        }
         $("#b-cancel").click(function() {
