Add option to enable custom lat, long

--- a/index.html
+++ b/index.html
@@ -36,6 +36,14 @@
         <label for="key7-0">Inverted</label>
 </fieldset>
 
+<fieldset data-role="controlgroup" data-type="vertical" data-mini="true">
+    <legend>Location Type</legend>
+        <input name="key10" id="key10-4" value="4" checked="checked" type="radio">
+        <label for="key10-0">Automatic GPS coordinates</label>
+        <input name="key10" id="key10-5" value="5" type="radio">
+        <label for="key10-1">Specified longitude and latitude (see below)</label>
+</fieldset>
+
 <fieldset data-role="controlgroup" data-mini="true">
  <legend><h4>Specific coordinates:</h4></legend>
  <i>This is only if you have the above option on "Specified longitude and latitude".</i>
